--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="http://servicelperu.com/assets/image/logo.png" alt="">
+                                    <img src="http://servicelperu.com/assets/image/logo.png" alt="" style=" filter: brightness(0) invert(1); ">
                                 </a>
                             </div>
                         </div>
