--- a/redes.html
+++ b/redes.html
@@ -47,7 +47,18 @@
             border-radius: 5px!important;
         }
 
-        
+        /*estilos de seccion redes*/
+        .slider_bg_1 {
+            background-image: url(http://servicelperu.com/assets/image/cableado-estructurado.png);
+        }
+
+        .how_we_work_area::before {
+        background-image: url(https://media-exp1.licdn.com/dms/image/C4E1BAQF4y9MQsV8HFw/company-background_10000/0?e=2159024400&v=beta&t=lfxBhiwjZc2Q7mZjKr8h82onOIvu1C5rfO8T0xxSZn0);
+        }
+
+        .service_area {
+            padding-top: 0px;
+        }
 
     </style>
 </head>
@@ -198,11 +209,9 @@
                     <div class="col-lg-10 col-md-10">
                         <div class="slider_text">
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                Startup you can build a 
-                                website online using the
-                                Bootstrap builder.
+                                CABLEADO ESTRUCTURADO
                             </h3>
-                            <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
+                            <!-- <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a> -->
                         </div>
                     </div>
                 </div>
@@ -211,10 +220,35 @@
     </div>
     <!-- slider_area_end -->
 
+     <!--/ portfolio_image_area  -->
+
+     <div class="how_we_work_area my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="work_info">
+                        <div class="section_title">
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Cableado Estructurado</h3>
+                            <p class="mid_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s" style="text-align: justify;"><strong>Servicel Perú S.A.C.</strong>, empresa especializada en Cableado Estructurado, ofrecemos soluciones y productos para el cableado de su oficina u edificio, con el fin de ofrecerle una conectividad de todos tus equipos activos, de diferentes o igual tecnología, permitiendo la integración con los diferentes servicios que disponga: telefonía, datos, seguridad, domótica, etc …, es decir, todo lo referente al cableado voz-datos para redes de comunicaciones. Gracias a nuestras soluciones de conectividad, le proporcionamos infraestructuras inalámbricas, fibra óptica y cobre que habilitan una gran cantidad de servicios de comunicaciones.</p>
+                            <!-- <p class="mid_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">“Function information without cross action media value.</p> -->
+                            <!-- <p class="last_p wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Efficiently unleash cross-media tour function information without cross action media value. Quickly maximize timely deliverables for real-time schemas.</p> -->
+                        </div>
+                        <!-- <div class="video_watch d-flex align-items-center">
+                            <div class="play_btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <a href="https://www.youtube.com/watch?v=D7tF-cY2M9o" class="video_icon popup-video"> <i class="fa fa-play"></i> </a>
+                            </div>
+                           <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s"> Watch Video</span>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- service_area  -->
     <div class="service_area">
         <div class="container">
-            <div class="row justify-content-center">
+            <!-- <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-70">
                         <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s" >Services</span>
@@ -223,33 +257,38 @@
                             best product design.</h3>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
-                <div class="col-xl-4 col-md-4">
+                <div class="col-xl-12 col-md-12">
                     <div class="single_service text-center wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".4s">
                         <div class="icon">
-                            <img src="./assets/img/svg_icon/1.svg" alt="">
+                            <!-- <img src="./assets/img/svg_icon/1.svg" alt=""> -->
+                            <i class="fa fa-mobile fa-5x" style="color: rebeccapurple;"></i>
                         </div>
-                        <h3>Graphic design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Redes, Conectividad y telefonia</h3>
+                        <p style="text-align: justify;">La Convergencia de voz y datos es prácticamente un estándar en toda red actual y que de manera creciente desde las grandes corporaciones hasta las pequeñas y medianas empresas, la consideran como parte central e integral para el funcionamiento de sus negocios para ello SIMTELCOM SAC suministra soluciones personalizadas de acuerdo con las necesidades de nuestros clientes contando con profesionales que están a la vanguardia de las nuevas tecnologías Ethernet, Fast Ethernet, Gigabit Ethernet, ATM, equipos de Voz sobre IP (VOIP), Switches, Routers, Módems.</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-4">
+                <div class="col-xl-12 col-md-12">
                     <div class="single_service text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                         <div class="icon">
-                            <img src="./assets/img/svg_icon/2.svg" alt="">
+                            <!-- <img src="./assets/img/svg_icon/2.svg" alt=""> -->
+                            <i class="fa fa-rss fa-5x" style="color: rebeccapurple;"></i>
                         </div>
-                        <h3>Web design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Redes LAN</h3>
+                        <p style="text-align: justify;">Las redes LAN hoy en día son primordiales para el éxito de los negocios. La comunicación y colaboración por medio de redes de cómputo y de telecomunicaciones han abierto posibilidades que permiten relacionar estrechamente las organizaciones sin importar el lugar físico en el que se encuentren.</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-4">
+                <div class="col-xl-12 col-md-12">
                     <div class="single_service text-center wow fadeInRight" data-wow-duration="1.2s" data-wow-delay=".4s">
                         <div class="icon">
-                            <img src="./assets/img/svg_icon/3.svg" alt="">
+                            <!-- <img src="./assets/img/svg_icon/3.svg" alt=""> -->
+                            <i class="fa fa-tachometer fa-5x" style="color: rebeccapurple;"></i>
                         </div>
-                        <h3>Mobile app</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Energia y potencia</h3>
+                        <p style="text-align: justify;">Servicel Perú S.A.C. consciente de proporcionar soluciones integrales ofrece a nuestros clientes equipos de alimentación y respaldo de energía.</p>
+                        <p style="text-align: justify;">Nuestros productos cumplen las normas peruanas e internacionales.</p>
+                        <p style="text-align: justify;">Si desea integrar equipos de respaldo para sus equipos de cómputo, sus equipos de telecomunicaciones o sus supercomputadoras, nuestros asesores tienen la respuesta, desde un simple regulador o UPS hasta grandes equipos de regulación y respaldo.</p>
                     </div>
                 </div>
             </div>
@@ -257,7 +296,7 @@
     </div>
     <!--/ service_area  -->
 
-    <div class="about_area">
+    <!-- <div class="about_area">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-lg-5 offset-lg-1">
@@ -273,10 +312,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- portfolio_image_area  -->
-    <div class="portfolio_image_area">
+    <!-- <div class="portfolio_image_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -360,32 +399,10 @@
             </div>
         </div>
     </div>
-    <!--/ portfolio_image_area  -->
-
-    <div class="how_we_work_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="work_info">
-                        <div class="section_title">
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">How we work</h3>
-                            <p class="mid_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">“Function information without cross action media value.</p>
-                            <p class="last_p wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Efficiently unleash cross-media tour function information without cross action media value. Quickly maximize timely deliverables for real-time schemas.</p>
-                        </div>
-                        <div class="video_watch d-flex align-items-center">
-                            <div class="play_btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <a href="https://www.youtube.com/watch?v=D7tF-cY2M9o" class="video_icon popup-video"> <i class="fa fa-play"></i> </a>
-                            </div>
-                           <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s"> Watch Video</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    -->
 
     <!-- team_member_start -->
-    <div class="team_area ">
+    <!-- <div class="team_area ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -478,11 +495,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--/ team_member_end -->
 
     <!-- testimonial_area  -->
-    <div class="testimonial_area ">
+    <!-- <div class="testimonial_area ">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -542,10 +559,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- /testimonial_area  -->
 
-    <div data-scroll-index="0" class="get_in_tauch_area">
+    <!-- <div data-scroll-index="0" class="get_in_tauch_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -591,7 +608,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- footer start -->
