--- a/venta.html
+++ b/venta.html
@@ -81,11 +81,9 @@
                     <div class="col-lg-10 col-md-10">
                         <div class="slider_text">
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                Startup you can build a 
-                                website online using the
-                                Bootstrap builder.
+                                Revolucione su negocio, poniendo al alcance de todos.
                             </h3>
-                            <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
+                            <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="web.html#portafolio-seccion">Ver Trabajos</a>
                         </div>
                     </div>
                 </div>
